--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
+<%# HEADER %>
 <%= render "shared/second-header" %>
+
+<%# MAIN %>
 <div class="container-login">
   <h1><%= t('.sign_up') %></h1>
   <%= render 'shared/flash_messages' %>
@@ -67,3 +70,6 @@
 
   <%= render 'devise/shared/links' %>
 </div>
+
+<%# FOOTER %>
+<%= render "shared/footer" %>
