--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -15,5 +15,12 @@
       </div>
     </div>
   </div>
-  <%# // お問い合わせチャットルームHEADEW %>
+  <%# // お問い合わせチャットルームHEADER %>
 </div>
+<%# MAIN %>
+<div class="iquiries"></div>
+<%# //MAIN %>
+
+<%# FOOTER %>
+<%= render "shared/footer" %>
+<%# FOOTER %>
