--- a/app/views/companies/search.html.erb
+++ b/app/views/companies/search.html.erb
@@ -2,31 +2,31 @@
 <%= render "shared/header" %>
 
 <div class="search__body">
-  <%# 企業一覧を表示する部分テンプレート %>
-  <div class="contents row">
-    <% if @results.present? %> 
-      <% @results.each do |company| %>
-        <ul class='company-lists'>
-      <li class='list'>
-        <%= link_to company_path(company.id) do %>
-        <div class="card" style="width: 18rem;">
-          <%= image_tag company.image, class:"card-img-top" %>
-          <div class="card-body">
-            <h5 class="card-title"><%= company.name %></h5>
-            <p class="card-text"><%= "業種：#{company.sector.name}" %><br>得意なプロダクト<br><%= company.industry.name %></p>
-          </div>
-        </div>
+  <div class="search__card">
+    <div class="contents row">
+      <% if @results.present? %> 
+        <% @results.each do |company| %>
+          <ul class='company-lists'>
+            <li class='list'>
+              <%= link_to company_path(company.id) do %>
+              <div class="card" style="width: 18rem;">
+                <%= image_tag company.image, class:"card-img-top" %>
+                <div class="card-body">
+                  <h5 class="card-title"><%= company.name %></h5>
+                  <p class="card-text"><%= "業種：#{company.sector.name}" %><br>得意なプロダクト<br><%= company.industry.name %></p>
+                </div>
+              </div>
+              <% end %>
+            </li>
+          </ul>
         <% end %>
-      </li>
-    </ul>
+      <% else %>
+        <div class="nil-message">
+          <p>一致する企業がありません。条件を変えて検索してください。</p>
+        </div>
       <% end %>
-    <% else %>
-      <div class="nil-message">
-        <p>一致する企業がありません。条件を変えて検索してください。</p>
-      </div>
-    <% end %>
+    </div>
   </div>
-  <%# /企業一覧を表示する部分テンプレート %>
 
   <%# 戻るボタン %>
   <div class="back-btn">
@@ -35,3 +35,6 @@
   <%# /戻るボタン%>
   
 </div>
+
+<%# FOOTER %>
+<%= render "shared/footer" %>
