--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,7 @@
+<%# HEADER %>
 <%= render "shared/header" %>
+
+<%# MAIN %>
 <div class="container-login">
   <h1>アカウント編集</h1>
   <%= render 'shared/flash_messages' %>
@@ -69,3 +72,6 @@
     <%= link_to t('.cancel_my_account'), registration_path(resource_name), data: {confirm: t('.are_you_sure')}, method: :delete, class: 'btn btn-danger btn-block w-100' %>
   </div>
 </div>
+
+<%# FOOTER %>
+<%= render "shared/footer" %>
